--- a/css/qgis2web.css
+++ b/css/qgis2web.css
@@ -12,6 +12,9 @@ html, body {
     width: 100%;
     top:50px;
 }
+.navbar-brand {
+    margin: 0 auto;
+}
 #swipe-wrapper {
   margin-left: 0px;
   margin-right: 0px;
@@ -83,7 +86,7 @@ html, body {
 }
 .select2-results__option {
     padding: 2px 6px;
-    font-size: 13px;
+    font-size: 12px;
 }
 .select2-container--default .select2-selection--single {
     background-color: #fff;
