--- a/css/qgis2web_v2.css
+++ b/css/qgis2web_v2.css
@@ -25,14 +25,13 @@ body {
 	border-left: inset white;
 }
 .navbar-brand {
-	margin: 0 auto;
+	/*margin: 0 auto;*/
 }
 #swipe-wrapper {
 	margin-left: 0px;
 	margin-right: 0px;
 	padding-left: 0px;
 	padding-right: 0px;
-	padding-top: 50px;
 }
 #swipe-wrapper > * {
 	z-index: 999;
@@ -258,34 +257,37 @@ div.cartodb-legend.choropleth li.graph {
 }
 
 /** MODAL SECTION*/
-#info-btn {
+/*#info-btn {
 	position: absolute;
 	cursor: pointer;
 	right: 10px;
 	top: 6px;
 	font-size: 17px;
 	float: right;
-}
+}*/
 
-a#info-btn span,
+/*a#info-btn span,*/
 a#base-map-selection span,
-span#switchlangbtn span {
+ul#switchlangbtn span,
+div.slider-container > span {
 	display: none;
 	transition: display 0.5s ease-in-out;
 	-moz-transition: display 0.5s ease-in-out;
 	-webkit-transition: display 0.5s ease-in-out;
 }
-a#info-btn:hover,
+/*a#info-btn:hover,*/
 a#base-map-selection:hover,
-span#switchlangbtn a:hover,
-a#info-btn:focus,
+ul#switchlangbtn a:hover,
+div.slider-container:hover a#info-btn:focus,
 a#base-map-selection:focus,
-span#switchlangbtn a:focus {
+ul#switchlangbtn a:focus,
+div.slider-container:focus {
 	text-decoration: none;
 }
-a#info-btn:hover span,
+/*a#info-btn:hover span,*/
 a#base-map-selection:hover span,
-span#switchlangbtn a:hover span {
+ul#switchlangbtn a:hover span,
+div.slider-container:hover > span {
 	display: block;
 	position: absolute;
 	width: 125px;
@@ -301,34 +303,76 @@ span#switchlangbtn a:hover span {
 	-webkit-transition: display 0.5s ease-in-out;
 }
 
-a#info-btn:hover span {
+/*a#info-btn:hover span {
 	right: 55px;
 	top: 7px;
-}
+}*/
 a#base-map-selection:hover span {
 	right: 55px;
 	top: 7px;
 }
-span#switchlangbtn a:hover span {
-	left: 65px;
-	top: 10px;
+ul#switchlangbtn a:hover span#portflag {
+	margin-left: -129px;
+	top: 17px;
+}
+ul#switchlangbtn a:hover span#usflag {
+	margin-left: 34px;
+	top: 17px;
+}
+div.slider-container:hover > span {
+	top: 20px;
+	right: 0px;
 }
 .modal-dialog {
 	margin-top: 80px;
 	font-size: 14px;
 }
 /* flags for switching languages*/
-#switchlangbtn {
-	position: fixed;
+#switchlangbtn > li:first-child {
+	margin-right: 2px;
+	/*position: fixed;
 	top: 10px;
-	left: 10px;
+	left: 10px;*/
 	/* display: inline; */
 }
-#langflag {
-	width: 22px;
-	height: 14px;
+.site-selection-container > ul > li:first-child {
+	margin-right: 10px;
 }
+/*navbar section*/
+ul.nav li a:focus {
+	outline: none;
+}
+.navbar {
+	box-shadow: 2px 2px 5px #bbb;
+	background-color: #fff;
+	color: #222;
+	z-index: 9999;
+	height: 50px;
+}
+/*.app-name {
+	text-decoration: none;
+	color: #4e4e4e;
+	font-weight: 700;
+	text-transform: uppercase;
+	font-size: 16px;
+}*/
+/*navbar section*/
 
+.slider-container {
+	position: absolute;
+	top: 162px;
+	right: 10px;
+	z-index: 500;
+	width: 100px;
+	cursor: pointer;
+}
+#background-slider > span {
+	background: white;
+	background-color: white;
+	webkit-box-shadow: 1px 1px 5px #ccc;
+	-moz-box-shadow: 1px 1px 5px #ccc;
+	box-shadow: 1px 1px 5px #ccc;
+}
 /*** tablet look ***/
 @media screen and (max-width: 900px) {
 	/*#legendWrapper,
