--- a/css/single_page.css
+++ b/css/single_page.css
@@ -45,7 +45,7 @@ body {
 	background: white;
 	padding: 10px;
     top: 118px;
-	right: 10px;
+	right: 12px;
 	z-index: 500;
 	cursor: pointer;
 }
@@ -55,15 +55,20 @@ body {
 	padding-top: 13px;
 }
 /*** leaflet styles ***/
+.leaflet-control-zoom.leaflet-bar.leaflet-control{
+	margin-top: 69px;
+}
 .leaflet-popup-content .card {
 	border: none;
 }
 .leaflet-popup-content .card .card-body{
 	padding: .25em;
 }
-.leaflet-control-measure.leaflet-control {
-	/*margin-top: 60px;*/
+
+.leaflet-draw.leaflet-control > div.leaflet-draw-section:nth-child(2){
+	display: none;
 }
+
 .leaflet-control-measure.leaflet-control,
 .leaflet-touch .leaflet-control-layers,
 .leaflet-touch .leaflet-bar {
@@ -282,12 +287,11 @@ ul.nav li a:focus {
 
 /*** mobile look ***/
 @media screen and (max-width: 600px) {
+	#comment-container{
+		margin: 0 auto;
+	}
 	#navbar-title {
 		display: none;
-	}
-	.navbar,
-	.navbar .navbar-brand {
-		font-size: 10px;
 	}
 	.leaflet-control-measure.leaflet-control {
 		display: none;
